# noctalia-greeter

./: CHANGELOG.md  README.md  TODO.md  justfile  meson.build
nix/: package.nix
scripts/: greetd_setup_lib.sh  noctalia-greeter-session  print_greetd_config.sh  setup_greeter_system.sh
src/: main.cpp
src/auth/: pam_authenticator.cpp  pam_authenticator.h
src/compositor/: noctalia_compositor.c
src/core/: log.cpp  log.h  resource_paths.cpp  resource_paths.h
src/greeter/: greeter_preferences.cpp  greeter_preferences.h  greeter_sessions.cpp  greeter_sessions.h  greeter_surface.cpp  greeter_surface.h
src/platform/: debug_wayland_platform.cpp  debug_wayland_platform.h  drm_platform.cpp  drm_platform.h  platform.h
src/render/: gl_renderer.cpp  gl_renderer.h  glyph_registry.cpp  glyph_registry.h  shader_program.cpp  shader_program.h  text_renderer.cpp  text_renderer.h
src/render/programs/: rect_program.cpp
src/render/scene/: input_area.cpp
src/session/: session_launcher.cpp  session_launcher.h  session_registry.cpp  session_registry.h
src/system/: user_registry.cpp  user_registry.h  vt_manager.cpp  vt_manager.h
src/ui/: login_view.cpp  login_view.h
src/ui/controls/: input.cpp  input.h  select.cpp  select_dropdown_popup.cpp
tests/: input_control_test.cpp  session_registry_test.cpp
